Update controller, view and modules to include languages model

--- a/app/modules/radar/views/radar.html
+++ b/app/modules/radar/views/radar.html
@@ -1,4 +1,13 @@
+<hr>
+<h3>Languages:</h3>
+<ul ng-repeat="language in radar.languages">
+  <li>Id: {{language.id}}</li>
+  <li>Language: {{language.name}}</li>
+</ul>
+
+<hr>
+<h3>Techniques:</h3>
 <ul ng-repeat="technique in radar.techniques">
-  <li>{{technique.id}}</li>
-  <li>{{technique.name}}</li>
+  <li>Id: {{technique.id}}</li>
+  <li>Technique: {{technique.name}}</li>
 </ul>
