Add icons to buttons

--- a/app/modules/techniques/views/techniques.html
+++ b/app/modules/techniques/views/techniques.html
@@ -1,7 +1,9 @@
 <h2>Techniques:</h2>
 <br />
 <div class="row">
-  <button class="btn btn-primary">Agregar nuevo</button>  
+  <button class="btn btn-primary">
+    <span class="glyphicon glyphicon-plus"></span>
+    Agregar</button>
 </div>
 <br />
 
@@ -15,7 +17,17 @@
   <tr ng-repeat="technique in techniques">
     <td>{{technique.name}}</td>
     <td>{{technique.status}}</td>
-    <td><button class="btn btn-info">Editar</button></td>
-    <td><button class="btn btn-danger">Eliminar</button></td>
+    <td>
+      <button class="btn btn-info">
+        <span class="glyphicon glyphicon-pencil"></span>
+        Editar
+      </button>
+    </td>
+    <td>
+      <button class="btn btn-danger">
+        <span class="glyphicon glyphicon-remove"></span>
+        Eliminar
+      </button>
+    </td>
   </tr>
 </table>
