--- a/app/modules/techniques/views/techniques.html
+++ b/app/modules/techniques/views/techniques.html
@@ -1,33 +1,44 @@
 <h2>Techniques:</h2>
-<br />
+<hr>
 <div class="row">
-  <button class="btn btn-primary">
-    <span class="glyphicon glyphicon-plus"></span>
-    Agregar</button>
+  <div class="col-sm-3">
+    <button class="btn btn-primary">
+      <span class="glyphicon glyphicon-plus"></span>
+      Agregar
+    </button>
+  </div>
 </div>
 <br />
 
-<table class="table table-hover">
-  <tr>
-    <th>Name</th>
-    <th>Status</th>
-    <th>Editar</th>
-    <th>Eliminar</th>
-  </tr>
-  <tr ng-repeat="technique in techniques">
-    <td>{{technique.name}}</td>
-    <td>{{technique.status}}</td>
-    <td>
-      <button class="btn btn-info">
-        <span class="glyphicon glyphicon-pencil"></span>
-        Editar
-      </button>
-    </td>
-    <td>
-      <button class="btn btn-danger">
-        <span class="glyphicon glyphicon-remove"></span>
-        Eliminar
-      </button>
-    </td>
-  </tr>
-</table>
+<div class="row">
+  <div class="col-sm-12">
+    <table class="table table-hover">
+      <tr>
+        <th>Name</th>
+        <th>Status</th>
+        <th>Editar</th>
+        <th>Eliminar</th>
+      </tr>
+      <tr ng-repeat="technique in techniques">
+        <td>{{technique.name}}</td>
+        <td>{{technique.status}}</td>
+        <td>
+          <button class="btn btn-info">
+            <span class="glyphicon glyphicon-pencil"></span>
+            <span class="hidden-xs">
+              Editar
+            </span>
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-danger">
+            <span class="glyphicon glyphicon-remove"></span>
+            <span class="hidden-xs">
+              Eliminar
+            </span>
+          </button>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
