Change labels to english

--- a/app/modules/techniques/views/techniques.html
+++ b/app/modules/techniques/views/techniques.html
@@ -4,7 +4,7 @@
   <div class="col-sm-3">
     <button class="btn btn-primary">
       <span class="glyphicon glyphicon-plus"></span>
-      Agregar
+      Add
     </button>
   </div>
 </div>
@@ -16,8 +16,8 @@
       <tr>
         <th>Name</th>
         <th>Status</th>
-        <th>Editar</th>
-        <th>Eliminar</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
       <tr ng-repeat="technique in techniques">
         <td>{{technique.name}}</td>
@@ -26,7 +26,7 @@
           <button class="btn btn-info">
             <span class="glyphicon glyphicon-pencil"></span>
             <span class="hidden-xs">
-              Editar
+              Edit
             </span>
           </button>
         </td>
@@ -34,7 +34,7 @@
           <button class="btn btn-danger">
             <span class="glyphicon glyphicon-remove"></span>
             <span class="hidden-xs">
-              Eliminar
+              Delete
             </span>
           </button>
         </td>
