Change buttons to a in techniques view

--- a/app/modules/techniques/views/techniques.html
+++ b/app/modules/techniques/views/techniques.html
@@ -2,10 +2,10 @@
 <hr>
 <div class="row">
   <div class="col-sm-3">
-    <button class="btn btn-primary">
+    <a class="btn btn-primary" ng-href="#">
       <span class="glyphicon glyphicon-plus"></span>
       Add
-    </button>
+    </a>
   </div>
 </div>
 <br />
@@ -23,20 +23,20 @@
         <td>{{technique.name}}</td>
         <td>{{technique.status}}</td>
         <td>
-          <button class="btn btn-info">
+          <a class="btn btn-info" ng-href="#">
             <span class="glyphicon glyphicon-pencil"></span>
             <span class="hidden-xs">
               Edit
             </span>
-          </button>
+          </a>
         </td>
         <td>
-          <button class="btn btn-danger">
+          <a class="btn btn-danger" ng-href="#">
             <span class="glyphicon glyphicon-remove"></span>
             <span class="hidden-xs">
               Delete
             </span>
-          </button>
+          </a>
         </td>
       </tr>
     </table>
