--- a/app/modules/techniques/views/techniques.html
+++ b/app/modules/techniques/views/techniques.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
   <div class="col-sm-3">
-    <a class="btn btn-primary" ng-href="#">
+    <a class="btn btn-primary" ng-href="#/techniques-add">
       <span class="glyphicon glyphicon-plus"></span>
       Add
     </a>
