--- a/app/modules/techniques/views/techniques-add.html
+++ b/app/modules/techniques/views/techniques-add.html
@@ -1,7 +1,7 @@
 <h2>Add Technique</h2>
 <hr>
 <form class="form-horizontal" role="form" novalidate
-data-ng-submit="crear()">
+data-ng-submit="save()">
 
   <div class="row form-group">
     <label for="name" class="col-sm-2 control-label">Name *</label>
