Refactor url names for new forms

--- a/app/modules/techniques/views/techniques-form.html
+++ b/app/modules/techniques/views/techniques-form.html
@@ -26,4 +26,12 @@ data-ng-submit="save()">
       placeholder="Enter Description"></textarea>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-3">
+      <a class="btn btn-primary">
+        Save
+      </a>
+    </div>
+  </div>
 </form>
