--- a/app/modules/languages/views/languages.html
+++ b/app/modules/languages/views/languages.html
@@ -2,7 +2,7 @@
 <hr>
 <div class="row">
   <div class="col-sm-3">
-    <a class="btn btn-primary" ng-href="#/languages-add">
+    <a class="btn btn-primary" ng-href="#/languages/new">
       <span class="glyphicon glyphicon-plus"></span>
       Add
     </a>
